Preventing article pager from displaying on small screen sizes

--- a/themes/shell/styles/layout/_header.scss
+++ b/themes/shell/styles/layout/_header.scss
@@ -156,7 +156,7 @@
     h2#block-shell-main-menu-menu{
       width: 1rem;
       height: 1rem;
-      top: 1.05rem;
+      top: .9rem;
       left: 1rem;
     }
 
@@ -171,7 +171,7 @@
     &:hover{
 
       h2#block-shell-main-menu-menu{
-        top: 1.85rem;
+        top: 1.55rem;
         transition: $in-transition;
       }
     }
