--- a/themes/shell/styles/pages/_article.scss
+++ b/themes/shell/styles/pages/_article.scss
@@ -3,6 +3,10 @@
   // Articles
   .page-node-type-article{
 
+    .article-pager{
+      display: none;
+    }
+
     .article-featured-content{
       position: relative;
     }
